<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_delivery"
        android:icon="@drawable/delivery"
        android:title="@string/title_delivery" />

    <item
        android:id="@+id/navigation_qna"
        android:icon="@drawable/qna"
        android:title="@string/title_qna" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_mypage"
        android:icon="@drawable/mypage"
        android:title="@string/title_mypage" />

    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/setting"
        android:title="@string/title_setting" />

</menu>
